feat: learn java source code