@@ -1,26 +1,26 @@
 /*
- * Copyright (c) 2000, 2013, Oracle and/or its affiliates. All rights reserved.
- * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ * Copyright (c) 2000, 2018, Oracle and/or its affiliates. All rights reserved.
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
+ * This code is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License version 2 only, as
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
+ * This code is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+ * version 2 for more details (a copy is included in the LICENSE file that
+ * accompanied this code).
  *
+ * You should have received a copy of the GNU General Public License version
+ * 2 along with this work; if not, write to the Free Software Foundation,
+ * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
  *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
+ * Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
+ * or visit www.oracle.com if you need additional information or have any
+ * questions.
  */
 
 // -- This file was mechanically generated: Do not edit! -- //
@@ -28,9 +28,9 @@
 package java.nio;
 
 import java.io.FileDescriptor;
-import sun.misc.Cleaner;
-import sun.misc.Unsafe;
-import sun.misc.VM;
+import java.lang.ref.Reference;
+import jdk.internal.misc.VM;
+import jdk.internal.ref.Cleaner;
 import sun.nio.ch.DirectBuffer;
 
 
@@ -45,14 +45,11 @@ class DirectByteBuffer
 
 
 
-    // Cached unsafe-access object
-    protected static final Unsafe unsafe = Bits.unsafe();
-
     // Cached array base offset
-    private static final long arrayBaseOffset = (long)unsafe.arrayBaseOffset(byte[].class);
+    private static final long ARRAY_BASE_OFFSET = UNSAFE.arrayBaseOffset(byte[].class);
 
     // Cached unaligned-access capability
-    protected static final boolean unaligned = Bits.unaligned();
+    protected static final boolean UNALIGNED = Bits.unaligned();
 
     // Base address, used in all indexing calculations
     // NOTE: moved up to Buffer.java for speed in JNI GetDirectBufferAddress
@@ -73,8 +70,6 @@ class DirectByteBuffer
         implements Runnable
     {
 
-        private static Unsafe unsafe = Unsafe.getUnsafe();
-
         private long address;
         private long size;
         private int capacity;
@@ -91,7 +86,7 @@ class DirectByteBuffer
                 // Paranoia
                 return;
             }
-            unsafe.freeMemory(address);
+            UNSAFE.freeMemory(address);
             address = 0;
             Bits.unreserveMemory(size, capacity);
         }
@@ -124,12 +119,12 @@ class DirectByteBuffer
 
         long base = 0;
         try {
-            base = unsafe.allocateMemory(size);
+            base = UNSAFE.allocateMemory(size);
         } catch (OutOfMemoryError x) {
             Bits.unreserveMemory(size, cap);
             throw x;
         }
-        unsafe.setMemory(base, size, (byte) 0);
+        UNSAFE.setMemory(base, size, (byte) 0);
         if (pa && (base % ps != 0)) {
             // Round up to page boundary
             address = base + ps - (base & (ps - 1));
@@ -138,6 +133,7 @@ class DirectByteBuffer
         }
         cleaner = Cleaner.create(this, new Deallocator(base, size, cap));
         att = null;
+
 
 
 
@@ -181,6 +177,7 @@ class DirectByteBuffer
 
 
 
+
     }
 
 
@@ -201,17 +198,31 @@ class DirectByteBuffer
 
 
 
+
+    }
+
+    @Override
+    Object base() {
+        return null;
     }
 
     public ByteBuffer slice() {
         int pos = this.position();
         int lim = this.limit();
-        assert (pos <= lim);
         int rem = (pos <= lim ? lim - pos : 0);
         int off = (pos << 0);
         assert (off >= 0);
         return new DirectByteBuffer(this, -1, 0, rem, rem, off);
     }
+
+
+    public ByteBuffer slice(int pos, int lim) {
+        assert (pos >= 0);
+        assert (pos <= lim);
+        int rem = lim - pos;
+        return new DirectByteBuffer(this, -1, 0, rem, rem, pos);
+    }
+
 
     public ByteBuffer duplicate() {
         return new DirectByteBuffer(this,
@@ -246,12 +257,24 @@ class DirectByteBuffer
     }
 
     public byte get() {
-        return ((unsafe.getByte(ix(nextGetIndex()))));
+        try {
+            return ((UNSAFE.getByte(ix(nextGetIndex()))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
 
     public byte get(int i) {
-        return ((unsafe.getByte(ix(checkIndex(i)))));
+        try {
+            return ((UNSAFE.getByte(ix(checkIndex(i)))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
+
+
+
+
 
 
 
@@ -270,6 +293,8 @@ class DirectByteBuffer
             if (length > rem)
                 throw new BufferUnderflowException();
 
+            long dstOffset = ARRAY_BASE_OFFSET + ((long)offset << 0);
+            try {
 
 
 
@@ -277,9 +302,17 @@ class DirectByteBuffer
 
 
 
-                Bits.copyToArray(ix(pos), dst, arrayBaseOffset,
-                                 (long)offset << 0,
-                                 (long)length << 0);
+
+
+
+                    UNSAFE.copyMemory(null,
+                                      ix(pos),
+                                      dst,
+                                      dstOffset,
+                                      (long)length << 0);
+            } finally {
+                Reference.reachabilityFence(this);
+            }
             position(pos + length);
         } else {
             super.get(dst, offset, length);
@@ -294,7 +327,11 @@ class DirectByteBuffer
 
     public ByteBuffer put(byte x) {
 
-        unsafe.putByte(ix(nextPutIndex()), ((x)));
+        try {
+            UNSAFE.putByte(ix(nextPutIndex()), ((x)));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
         return this;
 
 
@@ -303,7 +340,11 @@ class DirectByteBuffer
 
     public ByteBuffer put(int i, byte x) {
 
-        unsafe.putByte(ix(checkIndex(i)), ((x)));
+        try {
+            UNSAFE.putByte(ix(checkIndex(i)), ((x)));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
         return this;
 
 
@@ -314,7 +355,7 @@ class DirectByteBuffer
 
         if (src instanceof DirectByteBuffer) {
             if (src == this)
-                throw new IllegalArgumentException();
+                throw createSameBufferException();
             DirectByteBuffer sb = (DirectByteBuffer)src;
 
             int spos = sb.position();
@@ -329,7 +370,12 @@ class DirectByteBuffer
 
             if (srem > rem)
                 throw new BufferOverflowException();
-            unsafe.copyMemory(sb.ix(spos), ix(pos), (long)srem << 0);
+            try {
+                UNSAFE.copyMemory(sb.ix(spos), ix(pos), (long)srem << 0);
+            } finally {
+                Reference.reachabilityFence(sb);
+                Reference.reachabilityFence(this);
+            }
             sb.position(spos + srem);
             position(pos + srem);
         } else if (src.hb != null) {
@@ -362,6 +408,8 @@ class DirectByteBuffer
             if (length > rem)
                 throw new BufferOverflowException();
 
+            long srcOffset = ARRAY_BASE_OFFSET + ((long)offset << 0);
+            try {
 
 
 
@@ -370,10 +418,16 @@ class DirectByteBuffer
 
 
 
-                Bits.copyFromArray(src, arrayBaseOffset,
-                                   (long)offset << 0,
-                                   ix(pos),
-                                   (long)length << 0);
+
+
+                    UNSAFE.copyMemory(src,
+                                      srcOffset,
+                                      null,
+                                      ix(pos),
+                                      (long)length << 0);
+            } finally {
+                Reference.reachabilityFence(this);
+            }
             position(pos + length);
         } else {
             super.put(src, offset, length);
@@ -390,8 +444,11 @@ class DirectByteBuffer
         int lim = limit();
         assert (pos <= lim);
         int rem = (pos <= lim ? lim - pos : 0);
-
-        unsafe.copyMemory(ix(pos), ix(0), (long)rem << 0);
+        try {
+            UNSAFE.copyMemory(ix(pos), ix(0), (long)rem << 0);
+        } finally {
+            Reference.reachabilityFence(this);
+        }
         position(rem);
         limit(capacity());
         discardMark();
@@ -472,46 +529,47 @@ class DirectByteBuffer
 
 
 
-    byte _get(int i) {                          // package-private
-        return unsafe.getByte(address + i);
-    }
-
-    void _put(int i, byte b) {                  // package-private
-
-        unsafe.putByte(address + i, b);
 
 
 
-    }
 
 
 
 
     private char getChar(long a) {
-        if (unaligned) {
-            char x = unsafe.getChar(a);
-            return (nativeByteOrder ? x : Bits.swap(x));
+        try {
+            char x = UNSAFE.getCharUnaligned(null, a, bigEndian);
+            return (x);
+        } finally {
+            Reference.reachabilityFence(this);
         }
-        return Bits.getChar(a, bigEndian);
     }
 
     public char getChar() {
-        return getChar(ix(nextGetIndex((1 << 1))));
+        try {
+            return getChar(ix(nextGetIndex((1 << 1))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
 
     public char getChar(int i) {
-        return getChar(ix(checkIndex(i, (1 << 1))));
+        try {
+            return getChar(ix(checkIndex(i, (1 << 1))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
 
 
 
     private ByteBuffer putChar(long a, char x) {
 
-        if (unaligned) {
+        try {
             char y = (x);
-            unsafe.putChar(a, (nativeByteOrder ? y : Bits.swap(y)));
-        } else {
-            Bits.putChar(a, x, bigEndian);
+            UNSAFE.putCharUnaligned(null, a, y, bigEndian);
+        } finally {
+            Reference.reachabilityFence(this);
         }
         return this;
 
@@ -544,20 +602,20 @@ class DirectByteBuffer
         int rem = (off <= lim ? lim - off : 0);
 
         int size = rem >> 1;
-        if (!unaligned && ((address + off) % (1 << 1) != 0)) {
+        if (!UNALIGNED && ((address + off) % (1 << 1) != 0)) {
             return (bigEndian
                     ? (CharBuffer)(new ByteBufferAsCharBufferB(this,
                                                                        -1,
                                                                        0,
                                                                        size,
                                                                        size,
-                                                                       off))
+                                                                       address + off))
                     : (CharBuffer)(new ByteBufferAsCharBufferL(this,
                                                                        -1,
                                                                        0,
                                                                        size,
                                                                        size,
-                                                                       off)));
+                                                                       address + off)));
         } else {
             return (nativeByteOrder
                     ? (CharBuffer)(new DirectCharBufferU(this,
@@ -579,30 +637,39 @@ class DirectByteBuffer
 
 
     private short getShort(long a) {
-        if (unaligned) {
-            short x = unsafe.getShort(a);
-            return (nativeByteOrder ? x : Bits.swap(x));
+        try {
+            short x = UNSAFE.getShortUnaligned(null, a, bigEndian);
+            return (x);
+        } finally {
+            Reference.reachabilityFence(this);
         }
-        return Bits.getShort(a, bigEndian);
     }
 
     public short getShort() {
-        return getShort(ix(nextGetIndex((1 << 1))));
+        try {
+            return getShort(ix(nextGetIndex((1 << 1))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
 
     public short getShort(int i) {
-        return getShort(ix(checkIndex(i, (1 << 1))));
+        try {
+            return getShort(ix(checkIndex(i, (1 << 1))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
 
 
 
     private ByteBuffer putShort(long a, short x) {
 
-        if (unaligned) {
+        try {
             short y = (x);
-            unsafe.putShort(a, (nativeByteOrder ? y : Bits.swap(y)));
-        } else {
-            Bits.putShort(a, x, bigEndian);
+            UNSAFE.putShortUnaligned(null, a, y, bigEndian);
+        } finally {
+            Reference.reachabilityFence(this);
         }
         return this;
 
@@ -635,20 +702,20 @@ class DirectByteBuffer
         int rem = (off <= lim ? lim - off : 0);
 
         int size = rem >> 1;
-        if (!unaligned && ((address + off) % (1 << 1) != 0)) {
+        if (!UNALIGNED && ((address + off) % (1 << 1) != 0)) {
             return (bigEndian
                     ? (ShortBuffer)(new ByteBufferAsShortBufferB(this,
                                                                        -1,
                                                                        0,
                                                                        size,
                                                                        size,
-                                                                       off))
+                                                                       address + off))
                     : (ShortBuffer)(new ByteBufferAsShortBufferL(this,
                                                                        -1,
                                                                        0,
                                                                        size,
                                                                        size,
-                                                                       off)));
+                                                                       address + off)));
         } else {
             return (nativeByteOrder
                     ? (ShortBuffer)(new DirectShortBufferU(this,
@@ -670,30 +737,39 @@ class DirectByteBuffer
 
 
     private int getInt(long a) {
-        if (unaligned) {
-            int x = unsafe.getInt(a);
-            return (nativeByteOrder ? x : Bits.swap(x));
+        try {
+            int x = UNSAFE.getIntUnaligned(null, a, bigEndian);
+            return (x);
+        } finally {
+            Reference.reachabilityFence(this);
         }
-        return Bits.getInt(a, bigEndian);
     }
 
     public int getInt() {
-        return getInt(ix(nextGetIndex((1 << 2))));
+        try {
+            return getInt(ix(nextGetIndex((1 << 2))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
 
     public int getInt(int i) {
-        return getInt(ix(checkIndex(i, (1 << 2))));
+        try {
+            return getInt(ix(checkIndex(i, (1 << 2))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
 
 
 
     private ByteBuffer putInt(long a, int x) {
 
-        if (unaligned) {
+        try {
             int y = (x);
-            unsafe.putInt(a, (nativeByteOrder ? y : Bits.swap(y)));
-        } else {
-            Bits.putInt(a, x, bigEndian);
+            UNSAFE.putIntUnaligned(null, a, y, bigEndian);
+        } finally {
+            Reference.reachabilityFence(this);
         }
         return this;
 
@@ -726,20 +802,20 @@ class DirectByteBuffer
         int rem = (off <= lim ? lim - off : 0);
 
         int size = rem >> 2;
-        if (!unaligned && ((address + off) % (1 << 2) != 0)) {
+        if (!UNALIGNED && ((address + off) % (1 << 2) != 0)) {
             return (bigEndian
                     ? (IntBuffer)(new ByteBufferAsIntBufferB(this,
                                                                        -1,
                                                                        0,
                                                                        size,
                                                                        size,
-                                                                       off))
+                                                                       address + off))
                     : (IntBuffer)(new ByteBufferAsIntBufferL(this,
                                                                        -1,
                                                                        0,
                                                                        size,
                                                                        size,
-                                                                       off)));
+                                                                       address + off)));
         } else {
             return (nativeByteOrder
                     ? (IntBuffer)(new DirectIntBufferU(this,
@@ -761,30 +837,39 @@ class DirectByteBuffer
 
 
     private long getLong(long a) {
-        if (unaligned) {
-            long x = unsafe.getLong(a);
-            return (nativeByteOrder ? x : Bits.swap(x));
+        try {
+            long x = UNSAFE.getLongUnaligned(null, a, bigEndian);
+            return (x);
+        } finally {
+            Reference.reachabilityFence(this);
         }
-        return Bits.getLong(a, bigEndian);
     }
 
     public long getLong() {
-        return getLong(ix(nextGetIndex((1 << 3))));
+        try {
+            return getLong(ix(nextGetIndex((1 << 3))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
 
     public long getLong(int i) {
-        return getLong(ix(checkIndex(i, (1 << 3))));
+        try {
+            return getLong(ix(checkIndex(i, (1 << 3))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
 
 
 
     private ByteBuffer putLong(long a, long x) {
 
-        if (unaligned) {
+        try {
             long y = (x);
-            unsafe.putLong(a, (nativeByteOrder ? y : Bits.swap(y)));
-        } else {
-            Bits.putLong(a, x, bigEndian);
+            UNSAFE.putLongUnaligned(null, a, y, bigEndian);
+        } finally {
+            Reference.reachabilityFence(this);
         }
         return this;
 
@@ -817,20 +902,20 @@ class DirectByteBuffer
         int rem = (off <= lim ? lim - off : 0);
 
         int size = rem >> 3;
-        if (!unaligned && ((address + off) % (1 << 3) != 0)) {
+        if (!UNALIGNED && ((address + off) % (1 << 3) != 0)) {
             return (bigEndian
                     ? (LongBuffer)(new ByteBufferAsLongBufferB(this,
                                                                        -1,
                                                                        0,
                                                                        size,
                                                                        size,
-                                                                       off))
+                                                                       address + off))
                     : (LongBuffer)(new ByteBufferAsLongBufferL(this,
                                                                        -1,
                                                                        0,
                                                                        size,
                                                                        size,
-                                                                       off)));
+                                                                       address + off)));
         } else {
             return (nativeByteOrder
                     ? (LongBuffer)(new DirectLongBufferU(this,
@@ -852,30 +937,39 @@ class DirectByteBuffer
 
 
     private float getFloat(long a) {
-        if (unaligned) {
-            int x = unsafe.getInt(a);
-            return Float.intBitsToFloat(nativeByteOrder ? x : Bits.swap(x));
+        try {
+            int x = UNSAFE.getIntUnaligned(null, a, bigEndian);
+            return Float.intBitsToFloat(x);
+        } finally {
+            Reference.reachabilityFence(this);
         }
-        return Bits.getFloat(a, bigEndian);
     }
 
     public float getFloat() {
-        return getFloat(ix(nextGetIndex((1 << 2))));
+        try {
+            return getFloat(ix(nextGetIndex((1 << 2))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
 
     public float getFloat(int i) {
-        return getFloat(ix(checkIndex(i, (1 << 2))));
+        try {
+            return getFloat(ix(checkIndex(i, (1 << 2))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
 
 
 
     private ByteBuffer putFloat(long a, float x) {
 
-        if (unaligned) {
+        try {
             int y = Float.floatToRawIntBits(x);
-            unsafe.putInt(a, (nativeByteOrder ? y : Bits.swap(y)));
-        } else {
-            Bits.putFloat(a, x, bigEndian);
+            UNSAFE.putIntUnaligned(null, a, y, bigEndian);
+        } finally {
+            Reference.reachabilityFence(this);
         }
         return this;
 
@@ -908,20 +1002,20 @@ class DirectByteBuffer
         int rem = (off <= lim ? lim - off : 0);
 
         int size = rem >> 2;
-        if (!unaligned && ((address + off) % (1 << 2) != 0)) {
+        if (!UNALIGNED && ((address + off) % (1 << 2) != 0)) {
             return (bigEndian
                     ? (FloatBuffer)(new ByteBufferAsFloatBufferB(this,
                                                                        -1,
                                                                        0,
                                                                        size,
                                                                        size,
-                                                                       off))
+                                                                       address + off))
                     : (FloatBuffer)(new ByteBufferAsFloatBufferL(this,
                                                                        -1,
                                                                        0,
                                                                        size,
                                                                        size,
-                                                                       off)));
+                                                                       address + off)));
         } else {
             return (nativeByteOrder
                     ? (FloatBuffer)(new DirectFloatBufferU(this,
@@ -943,30 +1037,39 @@ class DirectByteBuffer
 
 
     private double getDouble(long a) {
-        if (unaligned) {
-            long x = unsafe.getLong(a);
-            return Double.longBitsToDouble(nativeByteOrder ? x : Bits.swap(x));
+        try {
+            long x = UNSAFE.getLongUnaligned(null, a, bigEndian);
+            return Double.longBitsToDouble(x);
+        } finally {
+            Reference.reachabilityFence(this);
         }
-        return Bits.getDouble(a, bigEndian);
     }
 
     public double getDouble() {
-        return getDouble(ix(nextGetIndex((1 << 3))));
+        try {
+            return getDouble(ix(nextGetIndex((1 << 3))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
 
     public double getDouble(int i) {
-        return getDouble(ix(checkIndex(i, (1 << 3))));
+        try {
+            return getDouble(ix(checkIndex(i, (1 << 3))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
 
 
 
     private ByteBuffer putDouble(long a, double x) {
 
-        if (unaligned) {
+        try {
             long y = Double.doubleToRawLongBits(x);
-            unsafe.putLong(a, (nativeByteOrder ? y : Bits.swap(y)));
-        } else {
-            Bits.putDouble(a, x, bigEndian);
+            UNSAFE.putLongUnaligned(null, a, y, bigEndian);
+        } finally {
+            Reference.reachabilityFence(this);
         }
         return this;
 
@@ -999,20 +1102,20 @@ class DirectByteBuffer
         int rem = (off <= lim ? lim - off : 0);
 
         int size = rem >> 3;
-        if (!unaligned && ((address + off) % (1 << 3) != 0)) {
+        if (!UNALIGNED && ((address + off) % (1 << 3) != 0)) {
             return (bigEndian
                     ? (DoubleBuffer)(new ByteBufferAsDoubleBufferB(this,
                                                                        -1,
                                                                        0,
                                                                        size,
                                                                        size,
-                                                                       off))
+                                                                       address + off))
                     : (DoubleBuffer)(new ByteBufferAsDoubleBufferL(this,
                                                                        -1,
                                                                        0,
                                                                        size,
                                                                        size,
-                                                                       off)));
+                                                                       address + off)));
         } else {
             return (nativeByteOrder
                     ? (DoubleBuffer)(new DirectDoubleBufferU(this,
