@@ -1,26 +1,26 @@
 /*
- * Copyright (c) 2000, 2013, Oracle and/or its affiliates. All rights reserved.
- * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ * Copyright (c) 2000, 2018, Oracle and/or its affiliates. All rights reserved.
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
+ * This code is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License version 2 only, as
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
+ * This code is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+ * version 2 for more details (a copy is included in the LICENSE file that
+ * accompanied this code).
  *
+ * You should have received a copy of the GNU General Public License version
+ * 2 along with this work; if not, write to the Free Software Foundation,
+ * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
  *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
+ * Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
+ * or visit www.oracle.com if you need additional information or have any
+ * questions.
  */
 
 // -- This file was mechanically generated: Do not edit! -- //
@@ -28,9 +28,9 @@
 package java.nio;
 
 import java.io.FileDescriptor;
-import sun.misc.Cleaner;
-import sun.misc.Unsafe;
-import sun.misc.VM;
+import java.lang.ref.Reference;
+import jdk.internal.misc.VM;
+import jdk.internal.ref.Cleaner;
 import sun.nio.ch.DirectBuffer;
 
 
@@ -45,14 +45,11 @@ class DirectCharBufferS
 
 
 
-    // Cached unsafe-access object
-    protected static final Unsafe unsafe = Bits.unsafe();
-
     // Cached array base offset
-    private static final long arrayBaseOffset = (long)unsafe.arrayBaseOffset(char[].class);
+    private static final long ARRAY_BASE_OFFSET = UNSAFE.arrayBaseOffset(char[].class);
 
     // Cached unaligned-access capability
-    protected static final boolean unaligned = Bits.unaligned();
+    protected static final boolean UNALIGNED = Bits.unaligned();
 
     // Base address, used in all indexing calculations
     // NOTE: moved up to Buffer.java for speed in JNI GetDirectBufferAddress
@@ -66,8 +63,6 @@ class DirectCharBufferS
     public Object attachment() {
         return att;
     }
-
-
 
 
 
@@ -185,6 +180,8 @@ class DirectCharBufferS
 
 
 
+
+
     // For duplicates and slices
     //
     DirectCharBufferS(DirectBuffer db,         // package-private
@@ -201,17 +198,31 @@ class DirectCharBufferS
 
 
 
+
+    }
+
+    @Override
+    Object base() {
+        return null;
     }
 
     public CharBuffer slice() {
         int pos = this.position();
         int lim = this.limit();
-        assert (pos <= lim);
         int rem = (pos <= lim ? lim - pos : 0);
         int off = (pos << 1);
         assert (off >= 0);
         return new DirectCharBufferS(this, -1, 0, rem, rem, off);
     }
+
+
+
+
+
+
+
+
+
 
     public CharBuffer duplicate() {
         return new DirectCharBufferS(this,
@@ -246,16 +257,28 @@ class DirectCharBufferS
     }
 
     public char get() {
-        return (Bits.swap(unsafe.getChar(ix(nextGetIndex()))));
+        try {
+            return (Bits.swap(UNSAFE.getChar(ix(nextGetIndex()))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
 
     public char get(int i) {
-        return (Bits.swap(unsafe.getChar(ix(checkIndex(i)))));
+        try {
+            return (Bits.swap(UNSAFE.getChar(ix(checkIndex(i)))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
 
 
     char getUnchecked(int i) {
-        return (Bits.swap(unsafe.getChar(ix(i))));
+        try {
+            return (Bits.swap(UNSAFE.getChar(ix(i))));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
     }
 
 
@@ -270,16 +293,26 @@ class DirectCharBufferS
             if (length > rem)
                 throw new BufferUnderflowException();
 
+            long dstOffset = ARRAY_BASE_OFFSET + ((long)offset << 1);
+            try {
 
-            if (order() != ByteOrder.nativeOrder())
-                Bits.copyToCharArray(ix(pos), dst,
-                                          (long)offset << 1,
-                                          (long)length << 1);
-            else
+                if (order() != ByteOrder.nativeOrder())
+                    UNSAFE.copySwapMemory(null,
+                                          ix(pos),
+                                          dst,
+                                          dstOffset,
+                                          (long)length << 1,
+                                          (long)1 << 1);
+                else
 
-                Bits.copyToArray(ix(pos), dst, arrayBaseOffset,
-                                 (long)offset << 1,
-                                 (long)length << 1);
+                    UNSAFE.copyMemory(null,
+                                      ix(pos),
+                                      dst,
+                                      dstOffset,
+                                      (long)length << 1);
+            } finally {
+                Reference.reachabilityFence(this);
+            }
             position(pos + length);
         } else {
             super.get(dst, offset, length);
@@ -294,7 +327,11 @@ class DirectCharBufferS
 
     public CharBuffer put(char x) {
 
-        unsafe.putChar(ix(nextPutIndex()), Bits.swap((x)));
+        try {
+            UNSAFE.putChar(ix(nextPutIndex()), Bits.swap((x)));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
         return this;
 
 
@@ -303,7 +340,11 @@ class DirectCharBufferS
 
     public CharBuffer put(int i, char x) {
 
-        unsafe.putChar(ix(checkIndex(i)), Bits.swap((x)));
+        try {
+            UNSAFE.putChar(ix(checkIndex(i)), Bits.swap((x)));
+        } finally {
+            Reference.reachabilityFence(this);
+        }
         return this;
 
 
@@ -314,7 +355,7 @@ class DirectCharBufferS
 
         if (src instanceof DirectCharBufferS) {
             if (src == this)
-                throw new IllegalArgumentException();
+                throw createSameBufferException();
             DirectCharBufferS sb = (DirectCharBufferS)src;
 
             int spos = sb.position();
@@ -329,7 +370,12 @@ class DirectCharBufferS
 
             if (srem > rem)
                 throw new BufferOverflowException();
-            unsafe.copyMemory(sb.ix(spos), ix(pos), (long)srem << 1);
+            try {
+                UNSAFE.copyMemory(sb.ix(spos), ix(pos), (long)srem << 1);
+            } finally {
+                Reference.reachabilityFence(sb);
+                Reference.reachabilityFence(this);
+            }
             sb.position(spos + srem);
             position(pos + srem);
         } else if (src.hb != null) {
@@ -362,18 +408,26 @@ class DirectCharBufferS
             if (length > rem)
                 throw new BufferOverflowException();
 
+            long srcOffset = ARRAY_BASE_OFFSET + ((long)offset << 1);
+            try {
 
-            if (order() != ByteOrder.nativeOrder())
-                Bits.copyFromCharArray(src,
-                                            (long)offset << 1,
-                                            ix(pos),
-                                            (long)length << 1);
-            else
+                if (order() != ByteOrder.nativeOrder())
+                    UNSAFE.copySwapMemory(src,
+                                          srcOffset,
+                                          null,
+                                          ix(pos),
+                                          (long)length << 1,
+                                          (long)1 << 1);
+                else
 
-                Bits.copyFromArray(src, arrayBaseOffset,
-                                   (long)offset << 1,
-                                   ix(pos),
-                                   (long)length << 1);
+                    UNSAFE.copyMemory(src,
+                                      srcOffset,
+                                      null,
+                                      ix(pos),
+                                      (long)length << 1);
+            } finally {
+                Reference.reachabilityFence(this);
+            }
             position(pos + length);
         } else {
             super.put(src, offset, length);
@@ -390,8 +444,11 @@ class DirectCharBufferS
         int lim = limit();
         assert (pos <= lim);
         int rem = (pos <= lim ? lim - pos : 0);
-
-        unsafe.copyMemory(ix(pos), ix(0), (long)rem << 1);
+        try {
+            UNSAFE.copyMemory(ix(pos), ix(0), (long)rem << 1);
+        } finally {
+            Reference.reachabilityFence(this);
+        }
         position(rem);
         limit(capacity());
         discardMark();
@@ -469,17 +526,9 @@ class DirectCharBufferS
 
 
 
-
-
-
-
-
-
-
-
-
-
-
+    ByteOrder charRegionOrder() {
+        return order();
+    }
 
 
 
