@@ -1,26 +1,26 @@
 /*
- * Copyright (c) 2000, 2013, Oracle and/or its affiliates. All rights reserved.
- * ORACLE PROPRIETARY/CONFIDENTIAL. Use is subject to license terms.
+ * Copyright (c) 2000, 2018, Oracle and/or its affiliates. All rights reserved.
+ * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
+ * This code is free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License version 2 only, as
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
+ * This code is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+ * FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
+ * version 2 for more details (a copy is included in the LICENSE file that
+ * accompanied this code).
  *
+ * You should have received a copy of the GNU General Public License version
+ * 2 along with this work; if not, write to the Free Software Foundation,
+ * Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
  *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
- *
+ * Please contact Oracle, 500 Oracle Parkway, Redwood Shores, CA 94065 USA
+ * or visit www.oracle.com if you need additional information or have any
+ * questions.
  */
 
 // -- This file was mechanically generated: Do not edit! -- //
@@ -28,9 +28,9 @@
 package java.nio;
 
 import java.io.FileDescriptor;
-import sun.misc.Cleaner;
-import sun.misc.Unsafe;
-import sun.misc.VM;
+import java.lang.ref.Reference;
+import jdk.internal.misc.VM;
+import jdk.internal.ref.Cleaner;
 import sun.nio.ch.DirectBuffer;
 
 
@@ -42,9 +42,6 @@ class DirectLongBufferRS
 
     implements DirectBuffer
 {
-
-
-
 
 
 
@@ -200,18 +197,32 @@ class DirectLongBufferRS
 
 
         super(db, mark, pos, lim, cap, off);
+        this.isReadOnly = true;
 
+    }
+
+    @Override
+    Object base() {
+        return null;
     }
 
     public LongBuffer slice() {
         int pos = this.position();
         int lim = this.limit();
-        assert (pos <= lim);
         int rem = (pos <= lim ? lim - pos : 0);
         int off = (pos << 3);
         assert (off >= 0);
         return new DirectLongBufferRS(this, -1, 0, rem, rem, off);
     }
+
+
+
+
+
+
+
+
+
 
     public LongBuffer duplicate() {
         return new DirectLongBufferRS(this,
@@ -292,7 +303,33 @@ class DirectLongBufferRS
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     public LongBuffer put(long x) {
+
+
+
+
 
 
 
@@ -306,11 +343,20 @@ class DirectLongBufferRS
 
 
 
+
+
+
+
         throw new ReadOnlyBufferException();
 
     }
 
     public LongBuffer put(LongBuffer src) {
+
+
+
+
+
 
 
 
@@ -380,11 +426,22 @@ class DirectLongBufferRS
 
 
 
+
+
+
+
+
+
+
+
         throw new ReadOnlyBufferException();
 
     }
 
     public LongBuffer compact() {
+
+
+
 
 
 
@@ -465,14 +522,6 @@ class DirectLongBufferRS
 
 
     }
-
-
-
-
-
-
-
-
 
 
 
